Ver propuestas una vez logueado en Facebook, filtrar propuestas por categoria y responder a pregunta Fixes #11. Votar propuesta Fixes #12. Argumentar propuesta Fixes #13

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string-array name="testimonios_categories_titles">
-        <item>Justicia en el trabajo</item>
+        <item>Justicia para trabajadores</item>
         <item>Justicia para familias</item>
         <item>Justicia vecinal y comunitaria</item>
         <item>Justicia para ciudadanos</item>
