--- a/res/layout/activity_propuestas.xml
+++ b/res/layout/activity_propuestas.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/drawable_bgr_gradient_dark"
@@ -10,32 +11,153 @@
         android:layout_height="wrap_content"
         layout="@layout/actionbar" />
 
-    <TabHost
-        android:id="@+id/propuestas_tabhost"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+    <ScrollView
+        android:id="@+id/propuestas_sv_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin" >
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:padding="10dp" >
 
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" >
-
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/propuestas_pager"
+                <mx.com.factico.cide.views.CustomTextView
+                    android:id="@+id/propuestas_tv_title"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </FrameLayout>
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/title_color"
+                    cide:typefaceRoboto="bold" />
+
+                <mx.com.factico.cide.views.CustomTextView
+                    android:id="@+id/propuestas_tv_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/title_color"
+                    cide:typefaceRoboto="regular" />
+            </LinearLayout>
+
+            <mx.com.factico.cide.views.CustomTextView
+                android:id="@+id/propuestas_tv_vote_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:text="@string/propuestas_vote"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/white"
+                cide:typefaceRoboto="regular" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/activity_vertical_margin"
+                android:background="@color/white"
+                android:divider="@drawable/divider_vertical_white"
+                android:orientation="horizontal"
+                android:padding="2dp"
+                android:showDividers="middle" >
+
+                <mx.com.factico.cide.views.CustomTextView
+                    android:id="@+id/propuestas_btn_favor"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@drawable/selector_btn_ligth"
+                    android:gravity="center"
+                    android:onClick="voteOnClick"
+                    android:text="@string/propuestas_btn_favor"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    cide:typefaceRoboto="regular" />
+
+                <mx.com.factico.cide.views.CustomTextView
+                    android:id="@+id/propuestas_btn_contra"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@drawable/selector_btn_ligth"
+                    android:gravity="center"
+                    android:onClick="voteOnClick"
+                    android:text="@string/propuestas_btn_contra"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    cide:typefaceRoboto="regular" />
+
+                <mx.com.factico.cide.views.CustomTextView
+                    android:id="@+id/propuestas_btn_abstencion"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@drawable/selector_btn_ligth"
+                    android:gravity="center"
+                    android:onClick="voteOnClick"
+                    android:text="@string/propuestas_btn_abstencion"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    cide:typefaceRoboto="regular" />
+            </LinearLayout>
+
+            <mx.com.factico.cide.views.CustomTextView
+                android:id="@+id/propuestas_tv_question"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/white"
+                cide:typefaceRoboto="regular" />
+
+            <LinearLayout
+                android:id="@+id/propuestas_vg_answers"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/activity_vertical_margin"
+                android:background="@color/white"
+                android:divider="@drawable/divider_vertical_white"
+                android:orientation="horizontal"
+                android:padding="2dp"
+                android:showDividers="middle" />
+
+            <mx.com.factico.cide.views.CustomTextView
+                android:id="@+id/propuestas_btn_answers_vermas"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/selector_btn_ligth"
+                android:gravity="center"
+                android:text="@string/propuestas_btn_comments_vermas"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/white"
+                android:visibility="gone"
+                cide:typefaceRoboto="regular" />
         </LinearLayout>
-    </TabHost>
+    </ScrollView>
 
 </LinearLayout>
