--- a/res/layout/dialog_result_post.xml
+++ b/res/layout/dialog_result_post.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <mx.com.factico.cide.views.CustomTextView
-        android:id="@+id/dialog_testimonios_add_message"
+        android:id="@+id/dialog_result_post_message"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -19,7 +19,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:text="@string/dialog_message"
+        android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/title_color"
         cide:typefaceRoboto="regular" />
@@ -30,7 +30,7 @@
         android:orientation="horizontal" >
 
         <mx.com.factico.cide.views.CustomTextView
-            android:id="@+id/dialog_testimonio_add_ok"
+            android:id="@+id/dialog_result_post_ok"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -46,7 +46,7 @@
             cide:typefaceRoboto="regular" />
 
         <mx.com.factico.cide.views.CustomTextView
-            android:id="@+id/dialog_testimonio_add_share"
+            android:id="@+id/dialog_result_post_share"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
