--- a/res/layout/item_propuestas_comments.xml
+++ b/res/layout/item_propuestas_comments.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
+    android:id="@+id/item_propuestas_comments_vg_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/drawable_bgr_gradient_dark"
-    android:gravity="center"
+    android:layout_height="wrap_content"
+    android:background="@drawable/selector_btn_white"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -12,28 +12,23 @@
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <mx.com.factico.cide.views.CustomTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:text="@string/propuestas_login_fb_label"
-        android:textColor="@color/white"
-        android:textSize="30sp"
-        cide:typefaceRoboto="regular" />
-
-    <mx.com.factico.cide.views.CustomTextView
-        android:id="@+id/facebook_btn_facebook_login"
+        android:id="@+id/item_propuestas_comments_tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/selector_btn_ligth"
-        android:gravity="center"
-        android:paddingBottom="15dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="15dp"
-        android:text="@string/propuestas_login_fb"
-        android:textColor="@color/white"
-        android:textSize="15sp"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/title_color"
+        android:textStyle="bold"
+        cide:typefaceRoboto="bold" />
+
+    <mx.com.factico.cide.views.CustomTextView
+        android:id="@+id/item_propuestas_comments_tv_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/default_text_color"
         cide:typefaceRoboto="regular" />
 
 </LinearLayout>
