--- a/res/layout/fragment_about.xml
+++ b/res/layout/fragment_about.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/white" >
 
     <ImageView
         android:id="@+id/fragment_about_iv_page"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/ic_splash"
-        android:scaleType="centerCrop"
+        android:scaleType="centerInside"
         android:contentDescription="@string/about_name" />
     
 </LinearLayout>
