--- a/res/layout/activity_testimonios_menu.xml
+++ b/res/layout/activity_testimonios_menu.xml
@@ -44,10 +44,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:contentDescription="@string/testimonio_name"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="10dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_justicia_trabajo" />
 
@@ -56,10 +52,11 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:minLines="4"
+                    android:paddingTop="10dp"
                     android:text="@string/justice_1"
                     android:textColor="@color/btn_ligth_green_color"
                     android:textSize="12sp"
-                    cide:typefaceRoboto="regular" />
+                    cide:typefaceRoboto="SourceSansPro_Regular" />
             </LinearLayout>
 
             <LinearLayout
@@ -72,18 +69,14 @@
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/selector_btn_squared"
-                android:orientation="vertical"
-                android:gravity="center_vertical" >
+                android:gravity="center_vertical"
+                android:orientation="vertical" >
 
                 <ImageView
                     android:id="@+id/testimonios_menu_iv_justice2"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:contentDescription="@string/testimonio_name"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="10dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_justicia_familiar" />
 
@@ -92,10 +85,11 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:minLines="4"
+                    android:paddingTop="10dp"
                     android:text="@string/justice_2"
                     android:textColor="@color/btn_ligth_green_color"
                     android:textSize="12sp"
-                    cide:typefaceRoboto="regular" />
+                    cide:typefaceRoboto="SourceSansPro_Regular" />
             </LinearLayout>
 
             <LinearLayout
@@ -107,18 +101,14 @@
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/selector_btn_squared"
-                android:orientation="vertical"
-                android:gravity="center_vertical" >
+                android:gravity="center_vertical"
+                android:orientation="vertical" >
 
                 <ImageView
                     android:id="@+id/testimonios_menu_iv_justice3"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:contentDescription="@string/testimonio_name"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="10dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_justicia_vecinal" />
 
@@ -127,10 +117,11 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:minLines="4"
+                    android:paddingTop="10dp"
                     android:text="@string/justice_3"
                     android:textColor="@color/btn_ligth_green_color"
                     android:textSize="12sp"
-                    cide:typefaceRoboto="regular" />
+                    cide:typefaceRoboto="SourceSansPro_Regular" />
             </LinearLayout>
         </TableRow>
 
@@ -148,18 +139,14 @@
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/selector_btn_squared"
-                android:orientation="vertical"
-                android:gravity="center_vertical" >
+                android:gravity="center_vertical"
+                android:orientation="vertical" >
 
                 <ImageView
                     android:id="@+id/testimonios_menu_iv_justice4"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:contentDescription="@string/testimonio_name"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="10dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_justicia_ciudadanos" />
 
@@ -168,10 +155,11 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:minLines="4"
+                    android:paddingTop="10dp"
                     android:text="@string/justice_4"
                     android:textColor="@color/btn_ligth_green_color"
                     android:textSize="12sp"
-                    cide:typefaceRoboto="regular" />
+                    cide:typefaceRoboto="SourceSansPro_Regular" />
             </LinearLayout>
 
             <LinearLayout
@@ -184,18 +172,14 @@
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/selector_btn_squared"
-                android:orientation="vertical"
-                android:gravity="center_vertical" >
+                android:gravity="center_vertical"
+                android:orientation="vertical" >
 
                 <ImageView
                     android:id="@+id/testimonios_menu_iv_justice5"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:contentDescription="@string/testimonio_name"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="10dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_justicia_emprendedores" />
 
@@ -204,19 +188,20 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:minLines="4"
+                    android:paddingTop="10dp"
                     android:text="@string/justice_5"
                     android:textColor="@color/btn_ligth_green_color"
                     android:textSize="12sp"
-                    cide:typefaceRoboto="regular" />
+                    cide:typefaceRoboto="SourceSansPro_Regular" />
             </LinearLayout>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="5dp"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="10dp"
+                android:layout_weight="1" />
         </TableRow>
     </TableLayout>
 
@@ -227,16 +212,16 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/selector_btn_squared_border"
+        android:background="@drawable/selector_btn_other"
         android:contentDescription="@string/testimonio_name"
         android:gravity="center"
-        android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="10dp"
         android:text="@string/testimonios_btn_map"
         android:textColor="@color/white"
         android:textSize="15sp"
-        cide:typefaceRoboto="regular" />
+        cide:typefaceRoboto="RobotoSlab_Regular" />
 
 </RelativeLayout>
