--- a/res/layout/item_tabhost.xml
+++ b/res/layout/item_tabhost.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/selector_tab_dark"
@@ -15,13 +16,14 @@
         android:scaleType="centerInside"
         android:src="@drawable/ic_launcher" />
 
-    <TextView
+    <mx.com.factico.cide.views.CustomTextView
         android:id="@+id/item_tabhost_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text=""
         android:textColor="@color/title_color"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        cide:typefaceRoboto="SourceSansPro_Regular" />
 
 </LinearLayout>
