--- a/res/layout/activity_facebook.xml
+++ b/res/layout/activity_facebook.xml
@@ -19,7 +19,7 @@
         android:text="@string/propuestas_login_fb_label"
         android:textColor="@color/white"
         android:textSize="30sp"
-        cide:typefaceRoboto="regular" />
+        cide:typefaceRoboto="SourceSansPro_Regular" />
 
     <mx.com.factico.cide.views.CustomTextView
         android:id="@+id/facebook_btn_facebook_login"
@@ -34,6 +34,6 @@
         android:text="@string/propuestas_login_fb"
         android:textColor="@color/white"
         android:textSize="15sp"
-        cide:typefaceRoboto="regular" />
+        cide:typefaceRoboto="SourceSansPro_Regular" />
 
 </LinearLayout>
