--- a/res/layout/activity_testimonios_list.xml
+++ b/res/layout/activity_testimonios_list.xml
@@ -16,8 +16,7 @@
         android:fillViewport="true"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" >
+        android:paddingRight="@dimen/activity_horizontal_margin" >
 
         <LinearLayout
             android:id="@+id/testimonios_list_vg_container"
