--- a/res/layout/item_spinner.xml
+++ b/res/layout/item_spinner.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<mx.com.factico.cide.views.CustomTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:id="@+id/item_spinner_tv_text"
     style="?android:attr/spinnerItemStyle"
     android:layout_width="match_parent"
@@ -7,4 +8,5 @@
     android:ellipsize="marquee"
     android:singleLine="true"
     android:textColor="@color/default_text_color"
-    android:textSize="15sp" />
+    android:textSize="15sp"
+    cide:typefaceRoboto="SourceSansPro_Regular" />
