--- a/res/layout/item_testimonios.xml
+++ b/res/layout/item_testimonios.xml
@@ -39,7 +39,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/title_color"
             android:textStyle="bold"
-            cide:typefaceRoboto="bold" />
+            cide:typefaceRoboto="SourceSansPro_Bold" />
 
         <mx.com.factico.cide.views.CustomTextView
             android:id="@+id/item_testimonios_tv_description"
@@ -48,7 +48,7 @@
             android:text=""
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/default_text_color"
-            cide:typefaceRoboto="regular" />
+            cide:typefaceRoboto="SourceSansPro_Regular" />
     </LinearLayout>
 
 </LinearLayout>
