--- a/res/layout/activity_testimonios.xml
+++ b/res/layout/activity_testimonios.xml
@@ -10,16 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         layout="@layout/actionbar" />
-    
+
     <mx.com.factico.cide.views.CustomScrollView
         android:id="@+id/testimonios_sv_scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true" >
+        android:layout_height="match_parent" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
             android:orientation="vertical" >
 
             <ImageView
@@ -50,7 +50,7 @@
                     android:paddingRight="@dimen/activity_horizontal_margin"
                     android:paddingTop="@dimen/activity_vertical_margin"
                     android:showDividers="middle" >
-                    
+
                     <mx.com.factico.cide.views.CustomTextView
                         android:id="@+id/testimonios_tv_title"
                         android:layout_width="match_parent"
@@ -92,13 +92,13 @@
             <LinearLayout
                 android:id="@+id/testimonios_vg_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/activity_vertical_margin"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:divider="@drawable/divider_horizontal"
-                android:orientation="vertical"
-                android:showDividers="middle" >
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:background="@color/white"
+                android:orientation="vertical" >
 
                 <mx.com.factico.cide.views.CustomTextView
                     android:layout_width="match_parent"
@@ -109,8 +109,8 @@
                     android:paddingTop="@dimen/activity_vertical_margin"
                     android:text="@string/testimonios_news"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/white"
-                    cide:typefaceRoboto="RobotoSlab_Regular" />
+                    android:textColor="@color/title_color"
+                    cide:typefaceRoboto="RobotoSlab_Bold" />
 
                 <ProgressBar
                     android:id="@+id/testimonios_pb_loading"
@@ -122,6 +122,22 @@
                     android:paddingTop="@dimen/activity_vertical_margin"
                     android:visibility="gone" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/testimonios_btn_showmore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="-16dp"
+                android:text="@string/testimonios_seemore"
+                android:paddingLeft="45dp"
+                android:paddingRight="45dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:background="@drawable/selector_btn_other"
+                android:textColor="@color/white"
+                android:visibility="invisible" />
         </LinearLayout>
     </mx.com.factico.cide.views.CustomScrollView>
 
