--- a/res/layout/item_testimonios.xml
+++ b/res/layout/item_testimonios.xml
@@ -4,51 +4,62 @@
     android:id="@+id/item_testimonios_vg_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
     android:background="@color/white"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="5" >
-
-    <ImageView
-        android:id="@+id/item_testimonios_iv_icuser"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:scaleType="centerInside"
-        android:paddingStart="0dp"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        android:paddingBottom="10dp"
-        android:contentDescription="@string/testimonio_name"
-        android:src="@drawable/ic_launcher" />
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <LinearLayout
-        android:id="@+id/item_testimonios_vg_container"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:orientation="vertical" >
+        android:orientation="horizontal"
+        android:weightSum="5" >
 
-        <mx.com.factico.cide.views.CustomTextView
-            android:id="@+id/item_testimonios_tv_title"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/item_testimonios_iv_icuser"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/title_color"
-            android:textStyle="bold"
-            cide:typefaceRoboto="SourceSansPro_Bold" />
+            android:layout_weight="1"
+            android:contentDescription="@string/testimonio_name"
+            android:paddingBottom="10dp"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:paddingStart="0dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_launcher" />
 
-        <mx.com.factico.cide.views.CustomTextView
-            android:id="@+id/item_testimonios_tv_description"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/item_testimonios_vg_container"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/default_text_color"
-            cide:typefaceRoboto="SourceSansPro_Regular" />
+            android:layout_weight="4"
+            android:orientation="vertical" >
+
+            <mx.com.factico.cide.views.CustomTextView
+                android:id="@+id/item_testimonios_tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/title_color"
+                android:textStyle="bold"
+                cide:typefaceRoboto="SourceSansPro_Bold" />
+
+            <mx.com.factico.cide.views.CustomTextView
+                android:id="@+id/item_testimonios_tv_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/default_text_color"
+                cide:typefaceRoboto="SourceSansPro_Regular" />
+        </LinearLayout>
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/btn_ligth_green_color" />
 
 </LinearLayout>
