--- a/res/layout/activity_testimonios.xml
+++ b/res/layout/activity_testimonios.xml
@@ -19,8 +19,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin" >
 
             <ImageView
                 android:id="@+id/testimonios_iv_logo"
@@ -90,20 +90,18 @@
             </RelativeLayout>
 
             <LinearLayout
-                android:id="@+id/testimonios_vg_container"
+                android:id="@+id/testimonios_vg_container_items_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:background="@color/white"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin" >
 
                 <mx.com.factico.cide.views.CustomTextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:background="@color/white"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin"
                     android:paddingTop="@dimen/activity_vertical_margin"
@@ -112,32 +110,29 @@
                     android:textColor="@color/title_color"
                     cide:typefaceRoboto="RobotoSlab_Bold" />
 
-                <ProgressBar
-                    android:id="@+id/testimonios_pb_loading"
+                <LinearLayout
+                    android:id="@+id/testimonios_vg_container_items"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:orientation="vertical"
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin"
-                    android:paddingTop="@dimen/activity_vertical_margin"
-                    android:visibility="gone" />
-            </LinearLayout>
+                    android:divider="@drawable/divider_horizontal"
+                    android:showDividers="middle" >
 
-            <TextView
-                android:id="@+id/testimonios_btn_showmore"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="-16dp"
-                android:text="@string/testimonios_seemore"
-                android:paddingLeft="45dp"
-                android:paddingRight="45dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:background="@drawable/selector_btn_other"
-                android:textColor="@color/white"
-                android:visibility="invisible" />
+                    <ProgressBar
+                        android:id="@+id/testimonios_pb_loading"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="@dimen/activity_vertical_margin"
+                        android:paddingLeft="@dimen/activity_horizontal_margin"
+                        android:paddingRight="@dimen/activity_horizontal_margin"
+                        android:paddingTop="@dimen/activity_vertical_margin"
+                        android:visibility="gone" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
     </mx.com.factico.cide.views.CustomScrollView>
 
