--- a/res/layout/activity_testimonios_list.xml
+++ b/res/layout/activity_testimonios_list.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/drawable_bgr_gradient_dark" >
+    android:background="@drawable/drawable_bgr_gradient_dark"
+    android:orientation="vertical" >
 
     <include
         android:layout_width="match_parent"
@@ -23,7 +23,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:orientation="vertical" />
+            android:divider="@drawable/divider_horizontal"
+            android:orientation="vertical"
+            android:showDividers="middle" />
     </ScrollView>
 
 </LinearLayout>
