--- a/res/layout/item_testimonios.xml
+++ b/res/layout/item_testimonios.xml
@@ -3,63 +3,52 @@
     xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:id="@+id/item_testimonios_vg_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    android:background="@drawable/selector_btn_white"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="5" >
+
+    <ImageView
+        android:id="@+id/item_testimonios_iv_icuser"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:contentDescription="@string/testimonio_name"
+        android:paddingBottom="10dp"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingStart="0dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_launcher" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/item_testimonios_vg_container"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="5" >
+        android:layout_weight="4"
+        android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/item_testimonios_iv_icuser"
-            android:layout_width="0dp"
+        <mx.com.factico.cide.views.CustomTextView
+            android:id="@+id/item_testimonios_tv_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:contentDescription="@string/testimonio_name"
-            android:paddingBottom="10dp"
-            android:paddingEnd="@dimen/activity_horizontal_margin"
-            android:paddingStart="0dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_launcher" />
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/title_color"
+            android:textStyle="bold"
+            cide:typefaceRoboto="SourceSansPro_Bold" />
 
-        <LinearLayout
-            android:id="@+id/item_testimonios_vg_container"
-            android:layout_width="0dp"
+        <mx.com.factico.cide.views.CustomTextView
+            android:id="@+id/item_testimonios_tv_description"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:orientation="vertical" >
-
-            <mx.com.factico.cide.views.CustomTextView
-                android:id="@+id/item_testimonios_tv_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/title_color"
-                android:textStyle="bold"
-                cide:typefaceRoboto="SourceSansPro_Bold" />
-
-            <mx.com.factico.cide.views.CustomTextView
-                android:id="@+id/item_testimonios_tv_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/default_text_color"
-                cide:typefaceRoboto="SourceSansPro_Regular" />
-        </LinearLayout>
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/default_text_color"
+            cide:typefaceRoboto="SourceSansPro_Regular" />
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/btn_ligth_green_color" />
 
 </LinearLayout>
