--- a/res/layout/activity_testimonios_add.xml
+++ b/res/layout/activity_testimonios_add.xml
@@ -13,9 +13,8 @@
     
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/background_testimonio_add"
-        android:fillViewport="true"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -136,7 +135,7 @@
                 android:textColor="@color/default_text_color"
                 android:textColorHint="@color/hololigth"
                 android:textSize="15sp"
-                cide:typefaceRoboto="RobotoSlab_Regular" />
+                cide:typefaceRoboto="SourceSansPro_Regular" />
 
             <mx.com.factico.cide.views.CustomTextView
                 android:id="@+id/testimonios_add_btn_senddata"
@@ -150,7 +149,7 @@
                 android:paddingRight="20dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                cide:typefaceRoboto="SourceSansPro_Regular" />
+                cide:typefaceRoboto="RobotoSlab_Regular" />
         </LinearLayout>
     </ScrollView>
 
