--- a/res/layout/item_testimonios.xml
+++ b/res/layout/item_testimonios.xml
@@ -4,7 +4,7 @@
     android:id="@+id/item_testimonios_vg_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/selector_btn_white"
+    android:background="@color/white"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -48,7 +48,8 @@
             android:text=""
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/default_text_color"
-            cide:typefaceRoboto="SourceSansPro_Regular" />
+            cide:typefaceRoboto="SourceSansPro_Regular"
+            android:maxLines="3" />
     </LinearLayout>
 
 </LinearLayout>
