--- a/res/drawable/drawable_bgr_rounded_white.xml
+++ b/res/drawable/drawable_bgr_rounded_white.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="@color/default_background_color" />
+    <solid android:color="@color/white" />
 
     <stroke
         android:width="2dp"
-        android:color="@color/primary_color" />
+        android:color="@color/white" />
 
     <padding
         android:bottom="1dp"
