--- a/res/layout/activity_seemoredescription.xml
+++ b/res/layout/activity_seemoredescription.xml
@@ -3,8 +3,10 @@
     xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/title_color"
-    android:orientation="vertical" >
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:showDividers="middle"
+    android:divider="@drawable/divider_horizontal_gray" >
 
     <include
         android:layout_width="match_parent"
@@ -21,28 +23,7 @@
             android:orientation="vertical" >
 
             <mx.com.factico.cide.views.CustomTextView
-                android:id="@+id/settings_tv_acercade_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:text="@string/acercade"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/white"
-                cide:typefaceRoboto="SourceSansPro_Regular" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:background="#AAFFFFFF" />
-
-            <mx.com.factico.cide.views.CustomTextView
-                android:id="@+id/settings_tv_acercade_description"
+                android:id="@+id/seemoredescription_tv_description"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingBottom="@dimen/activity_vertical_margin"
@@ -51,7 +32,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:text="@string/lorem_ipsum"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/white"
+                android:textColor="@color/default_text_color"
                 cide:typefaceRoboto="SourceSansPro_Regular" />
         </LinearLayout>
     </ScrollView>
