--- a/res/layout/activity_testimonios_add.xml
+++ b/res/layout/activity_testimonios_add.xml
@@ -10,147 +10,153 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         layout="@layout/actionbar" />
-    
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/background_testimonio_add"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/background_testimonio_add"
+        android:orientation="vertical" >
+
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin" >
 
-            <mx.com.factico.cide.views.CustomEditText
-                android:id="@+id/testimonios_add_et_name"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="@string/testimonios_add_name"
-                android:inputType="textPersonName"
-                android:padding="10dp"
-                android:textColor="@color/default_text_color"
-                android:textColorHint="@color/hololigth"
-                android:textSize="15sp"
-                cide:typefaceRoboto="SourceSansPro_Regular" />
+                android:orientation="vertical" >
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/btn_ligth_green_color" />
+                <mx.com.factico.cide.views.CustomEditText
+                    android:id="@+id/testimonios_add_et_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:ems="10"
+                    android:hint="@string/testimonios_add_name"
+                    android:inputType="textPersonName"
+                    android:padding="10dp"
+                    android:textColor="@color/default_text_color"
+                    android:textColorHint="@color/hololigth"
+                    android:textSize="15sp"
+                    cide:typefaceRoboto="SourceSansPro_Regular" />
 
-            <mx.com.factico.cide.views.CustomEditText
-                android:id="@+id/testimonios_add_et_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:ems="10"
-                android:hint="@string/testimonios_add_email"
-                android:inputType="textEmailAddress"
-                android:padding="10dp"
-                android:textColor="@color/default_text_color"
-                android:textColorHint="@color/hololigth"
-                android:textSize="15sp"
-                cide:typefaceRoboto="SourceSansPro_Regular" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/btn_ligth_green_color" />
 
-            <Spinner
-                android:id="@+id/testimonios_add_sp_age"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"
-                android:spinnerMode="dialog" />
-            
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/btn_ligth_green_color" />
-            
-            <Spinner
-                android:id="@+id/testimonios_add_sp_gender"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"
-                android:spinnerMode="dialog" />
-            
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/btn_ligth_green_color" />
-            
-            <Spinner
-                android:id="@+id/testimonios_add_sp_grade"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"
-                android:spinnerMode="dialog" />
-            
-            <Spinner
-                android:id="@+id/testimonios_add_sp_category"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"
-                android:spinnerMode="dialog" />
+                <mx.com.factico.cide.views.CustomEditText
+                    android:id="@+id/testimonios_add_et_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:ems="10"
+                    android:hint="@string/testimonios_add_email"
+                    android:inputType="textEmailAddress"
+                    android:padding="10dp"
+                    android:textColor="@color/default_text_color"
+                    android:textColorHint="@color/hololigth"
+                    android:textSize="15sp"
+                    cide:typefaceRoboto="SourceSansPro_Regular" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/btn_ligth_green_color" />
-            
-            <Spinner
-                android:id="@+id/testimonios_add_sp_city"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"
-                android:spinnerMode="dialog" />
+                <Spinner
+                    android:id="@+id/testimonios_add_sp_age"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:spinnerMode="dialog" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/btn_ligth_green_color" />
-            
-            <mx.com.factico.cide.views.CustomEditText
-                android:id="@+id/testimonios_add_et_explication"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:ems="10"
-                android:hint="@string/testimonios_add_explication"
-                android:inputType="textMultiLine"
-                android:maxEms="2000"
-                android:minLines="3"
-                android:padding="10dp"
-                android:textColor="@color/default_text_color"
-                android:textColorHint="@color/hololigth"
-                android:textSize="15sp"
-                cide:typefaceRoboto="SourceSansPro_Regular" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/btn_ligth_green_color" />
 
-            <mx.com.factico.cide.views.CustomTextView
-                android:id="@+id/testimonios_add_btn_senddata"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_btn_other"
-                android:text="@string/testimonios_add_btn_senddata"
-                android:textColor="@color/white"
-                android:gravity="center"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                cide:typefaceRoboto="RobotoSlab_Regular" />
-        </LinearLayout>
-    </ScrollView>
+                <Spinner
+                    android:id="@+id/testimonios_add_sp_gender"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:spinnerMode="dialog" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/btn_ligth_green_color" />
+
+                <Spinner
+                    android:id="@+id/testimonios_add_sp_grade"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:spinnerMode="dialog" />
+
+                <Spinner
+                    android:id="@+id/testimonios_add_sp_category"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:spinnerMode="dialog" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/btn_ligth_green_color" />
+
+                <Spinner
+                    android:id="@+id/testimonios_add_sp_city"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:spinnerMode="dialog" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/btn_ligth_green_color" />
+
+                <mx.com.factico.cide.views.CustomEditText
+                    android:id="@+id/testimonios_add_et_explication"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:ems="10"
+                    android:hint="@string/testimonios_add_explication"
+                    android:inputType="textMultiLine"
+                    android:maxEms="2000"
+                    android:minLines="3"
+                    android:padding="10dp"
+                    android:textColor="@color/default_text_color"
+                    android:textColorHint="@color/hololigth"
+                    android:textSize="15sp"
+                    cide:typefaceRoboto="SourceSansPro_Regular" />
+
+                <mx.com.factico.cide.views.CustomTextView
+                    android:id="@+id/testimonios_add_btn_senddata"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/selector_btn_other"
+                    android:gravity="center"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:paddingTop="10dp"
+                    android:text="@string/testimonios_add_btn_senddata"
+                    android:textColor="@color/white"
+                    cide:typefaceRoboto="RobotoSlab_Regular" />
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
 
 </LinearLayout>
