--- a/res/layout/fragment_about.xml
+++ b/res/layout/fragment_about.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/ic_splash"
-        android:scaleType="centerInside"
+        android:scaleType="centerCrop"
         android:contentDescription="@string/about_name" />
     
 </LinearLayout>
