--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -25,8 +25,8 @@
     
     <color name="default_background_color">#F2F2F2</color>
     
-    <color name="divider_color">#6CDA84</color>
-    
+    <color name="divider_gray_color">#E0E0E0</color>
+    <color name="divider_green_color">#6CDA84</color>
     <color name="divider_white_color">#FFFFFF</color>
     
     <color name="btn_dark_green_color">#FF4A8293</color>
