--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -26,7 +26,7 @@
     
     <ImageView
         android:id="@+id/about_iv_scroll"
-        android:layout_width="wrap_content"
+        android:layout_width="25dp"
         android:layout_height="100dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
