--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="holodark">#333333</color>
     
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#FF0000FF</color>
     <color name="black_44">#44000000</color>
     <color name="black">#FF000000</color>
     
