--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -29,7 +29,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                android:text="@string/acercade"
+                android:text="@string/acercade_name"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/white"
                 cide:typefaceRoboto="SourceSansPro_Regular" />
@@ -52,6 +52,21 @@
                 android:text="@string/lorem_ipsum"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/white"
+                cide:typefaceRoboto="SourceSansPro_Regular" />
+            
+            <mx.com.factico.cide.views.CustomTextView
+                android:id="@+id/settings_tv_acercade_politicas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:text="@string/acercade_politicas"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/blue"
                 cide:typefaceRoboto="SourceSansPro_Regular" />
         </LinearLayout>
     </ScrollView>
